fixed some minor errors and made some minor improovements - tested i with msvc 14.35.32215 - since it's using -Wall (/W4) and -Werror (/Wx) a minor error had to be muted in a library 😓

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -69,4 +69,4 @@ jobs:
               if: matrix.config.os == 'windows-latest'
               with:
                   name: ${{ matrix.config.name }} Executable
-                  path: build/oopetris.exe
+                  path: build/Seatbelt2.exe
