try to add cmake parser_nodes support

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,6 +42,11 @@ jobs:
           git clone https://github.com/Microsoft/vcpkg.git
           ./vcpkg/bootstrap-vcpkg.sh
 
+      - name: Generate parser_nodes
+        shell: bash
+        run: |
+          python ./tools/ast-node-generator-for-seatbelt2/main.py ./tools/ast-node-generator-for-seatbelt2/parser_nodes.types ./src/parser_nodes/parser_nodes parser_nodes
+
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
