--- a/src/parser_nodes/meson.build
+++ b/src/parser_nodes/meson.build
@@ -4,17 +4,24 @@
 prog_python = find_program('python3', 'python', required: true)
 
 env = environment()
-env.append(
-    'PYTHONPATH',
-    meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/',
-)
+
+if build_machine.system() == 'windows'
+    env.append(
+        'PYTHONPATH',
+        meson.global_source_root() + '\\tools\\ast-node-generator-for-seatbelt2',
+    )
+endif
 
 # generate and regenerate the 'parser_nodes.(c|h)pp' files dynamically
-src_files += custom_target(
+# this generates the files into the built dir, where they are needed to built the project
+parser_nodes = custom_target(
     'parser_nodes',
-    output: ['parser_nodes.cpp', 'parser_nodes.hpp'],
+    output: [
+        'parser_nodes.cpp',
+        'parser_nodes.hpp',
+    ],
     input: [
-        ## this is an input and not as nmormal strin g below, since chnage sin here should trigger an automatic rebuilt!
+        ## this is an input and not as normal string below in the command list, since changes in here should trigger an automatic rebuilt!
         meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/main.py',
         meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/parser_nodes.types',
     ],
@@ -22,6 +29,22 @@ src_files += custom_target(
         prog_python,
         '@INPUT@',
         '@OUTDIR@/parser_nodes',
+        'parser_nodes',
+    ],
+    env: env,
+)
+
+src_files += parser_nodes
+
+# this generates the file into the source tree, where they are needed for autocompletion and manual lookover (to invoke run "meson compile generate_parser_nodes" (add -C <builddir> if necessary!)
+run_target(
+    'generate_parser_nodes',
+    depends: [parser_nodes],
+    command: [
+        prog_python,
+        meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/main.py',
+        meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/parser_nodes.types',
+        meson.current_source_dir() + '/parser_nodes',
         'parser_nodes',
     ],
     env: env,
