--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "tools/ast-node-generator-for-seatbelt2"]
 	path = tools/ast-node-generator-for-seatbelt2
 	url = git@github.com:Backseating-Committee-2k/ast-node-generator-for-seatbelt2.git
+	ignore = dirty
