adjusted the generation of parser_node.types

--- a/src/parser_nodes/meson.build
+++ b/src/parser_nodes/meson.build
@@ -1,7 +1,19 @@
+# get the submodule files
+submodule_root = (
+    meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2'
+)
+submodule_files = files(
+    submodule_root + '/main.py',
+    submodule_root + '/emitter.py',
+    submodule_root + '/lexer.py',
+    submodule_root + '/parser.py',
+)
+
 ## nearly the same as: 
 # pymodule = import('python')
 # prog_python = pymodule.find_installation('python3', required: true)
 prog_python = find_program('python3', 'python', required: true)
+
 
 # generate and regenerate the 'parser_nodes.(c|h)pp' files dynamically
 # this generates the files into the built dir, where they are needed to built the project
@@ -13,12 +25,13 @@ parser_nodes = custom_target(
     ],
     input: [
         ## this is an input and not as normal string below in the command list, since changes in here should trigger an automatic rebuilt!
-        meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/main.py',
-        meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/parser_nodes.types',
+        meson.global_source_root() + '/type_definitions/parser_nodes.types',
+        submodule_files,
     ],
     command: [
         prog_python,
-        '@INPUT@',
+        submodule_root + '/main.py',
+        '@INPUT0@',
         '@OUTDIR@/parser_nodes',
         'parser_nodes',
     ],
@@ -29,11 +42,10 @@ src_files += parser_nodes
 # this generates the file into the source tree, where they are needed for autocompletion and manual lookover (to invoke run "meson compile generate_parser_nodes" (add -C <builddir> if necessary!)
 run_target(
     'generate_parser_nodes',
-    depends: [parser_nodes],
     command: [
         prog_python,
-        meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/main.py',
-        meson.global_source_root() + '/tools/ast-node-generator-for-seatbelt2/parser_nodes.types',
+        submodule_root + '/main.py',
+        meson.global_source_root() + '/type_definitions/parser_nodes.types',
         meson.current_source_dir() + '/parser_nodes',
         'parser_nodes',
     ],
